Wait for xprop to exit
Hopefully fixes window rarely failing to get redirected